...
  };

  const filteredGoals = metaGoals.filter(mg => mg.status === activeTab);

  return (
    <FlatList
      testID="goal-list"
      data={filteredGoals}
      keyExtractor={item => item.id.toString()}
      refreshControl={
        <RefreshControl
          refreshing={refreshing}
          onRefresh={onRefresh}
...
