...
    return <View style={styles.container} />;
  }

  return (
    <ScrollView
      {...KEYBOARD_DISMISS_PROPS}
      testID="garage-screen"
      style={styles.container}
      contentContainerStyle={{paddingBottom: bottomPadding}}
      refreshControl={
        <RefreshControl
          refreshing={refreshing}
          onRefresh={onRefresh}
...
